--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ svg = "0.13.1"
 imageproc = "0.23.0"
 clap = { version = "4.3.0", features = ["derive"] }
 anyhow = "1.0.71"
+svgtypes = "0.11.0"
+roxmltree = "0.18.0"
