更新Cargo.toml和Cargo.lock以添加kurbo依赖，修改main.rs以优化命令行参数处理和图像转换逻辑，增强SVG到PNG和PNG到SVG的功能，改进路径简化和颜色分离处理。

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ clap = { version = "4.3.0", features = ["derive"] }
 anyhow = "1.0.71"
 svgtypes = "0.11.0"
 roxmltree = "0.18.0"
+kurbo = "0.11.1"
