--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 authors = ["SVG Converter Developer"]
 description = "A tool to convert between SVG and PNG formats"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
 resvg = "0.35.0"
 usvg = "0.35.0"
@@ -17,3 +20,21 @@ anyhow = "1.0.71"
 svgtypes = "0.11.0"
 roxmltree = "0.18.0"
 kurbo = "0.11.1"
+wasm-bindgen = "0.2"
+js-sys = "0.3"
+base64 = "0.21"
+
+[dependencies.web-sys]
+version = "0.3"
+features = [
+  "console",
+  "Document",
+  "Element",
+  "HtmlElement",
+  "Node",
+  "Window"
+]
+
+[profile.release]
+lto = true
+opt-level = "s"
